[project]
name = "plsxml"
version = "1.2.0"
authors = [
  { name = "Matt Pewsey", email = "mattpewsey+pypi@gmail.com" }
]
description = "Parse PLS-CADD XML files to dictionaries and data frames."
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License"
]
dependencies = [
  "pandas>=0.23.0"
]
requires-python = ">=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4"

[project.optional-dependencies]
test = [
  "pytest>=3.5.1",
  "pytest-cov>=2.5.1",
  "codecov>=2.0.15"
]
docs = [
  "docutils==0.14",
  "numpydoc>=0.8.0"
]

[project.urls]
homepage = "https://github.com/mpewsey/plsxml"