[bdist_wheel]
universal = 1

[metadata]
project = PLSXML
name = plsxml
version = 0.0.1
author = Matt Pewsey
author_email = mattpewsey@gmail.com
copyright = 2018, Matt Pewsey
description = Parse PLS-CADD XML files to dictionaries and data frames.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/line-mind/plsxml
keywords =
  pls-cadd
  xml-parser
classifiers =
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License
  Development Status :: 5 - Production/Stable

[options]
packages = find:
include_package_data = True
install_requires =
  pandas>=0.23.0
  astropy>=3.0.2
python_requires = >=3.5

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  jinja2>=2.10
  recommonmark>=0.4.0
  docutils==0.14
  numpydoc>=0.8.0
