[bdist_wheel]
universal = 1

[metadata]
project = PLSXML
name = plsxml
version = 1.1.1
author = Matt Pewsey
author_email = mattpewsey+pypi@gmail.com
copyright = 2018, Matt Pewsey
description = Parse PLS-CADD XML files to dictionaries and data frames.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/mpewsey/plsxml
keywords =
  pls-cadd
  xml-parser
classifiers =
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  pandas>=0.23.0
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  docutils==0.14
  numpydoc>=0.8.0
